<!--
  ~ Created by Mong Ramos Jr. on 12/17/17 7:45 AM
  ~
  ~ Copyright (c) 2017 Brainbox Inc. All rights reserved.
  ~
  ~ Last modified 12/16/17 9:22 PM
  -->

<resources>
    <string name="app_name">3D2Nworld</string>
    <string name="title_home">3D2Nworld.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name_resort">Resort Name</string>
    <string name="name_user">User</string>
    <string name="developer_name">Mong Ramos Jr.</string>
    <string name="developer_email">mongramosjr@gmail.com</string>

    <string name="action_cart">Cart</string>

    <string name="title_resorts">Resorts</string>
    <string name="title_deals">Deals</string>
    <string name="title_blogs">Blogs</string>
    <string name="title_cart">Cart</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_login">Log In</string>
    <string name="title_logout">Logout</string>
    <string name="title_register">Sign Up For 3n2nworld</string>
    <string name="title_deal">Deal</string>
    <string name="title_resort">Resort</string>
    <string name="title_account">My Account</string>
    <string name="title_profile">Profile</string>
    <string name="title_vouchers">Vouchers</string>
    <string name="title_cart_billing_and_shipping">Billing and Shipping Address</string>
    <string name="title_cart_payment_method">Payment</string>
    <string name="title_cart_confirmation">Confirmation</string>
    <string name="title_cart_billing">Billing</string>

    <!-- Strings related to login and registration -->
    <string name="action_login_in">Log In</string>
    <string name="action_register">Sign Up</string>
    <string name="action_join_now">Join now &#62;</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_has_account">Already have an account?</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_create_account">Don\'t have an account yet?</string>
    <string name="action_facebook_login">Continue with Facebook</string>
    <string name="action_google_login">Continue with Google</string>
    <string name="or">or</string>

    <string name="header_full_name">Hi. What\'s your name?</string>
    <string name="subheader_full_name" />
    <string name="header_mobile_number">What\'s your number?</string>
    <string name="subheader_mobile_number">Don\'t worry, we\'ll never share it publicly.</string>
    <string name="header_email">What\'s your email?</string>
    <string name="subheader_email">We won\'t send you spam.</string>

    <string name="prompt_fullname">Full name</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_mobile_number">Phone number</string>
    <string name="prompt_birth_date">Birthday</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_verify">Re-enter password</string>

    <string name="agree_tos_and_privacy_policy">By signing up, logging in or continuing, you agree to our 3D2Nworld <a href="http://www.3d2nworld.com/tos">Terms of Service</a> and that you have read our <a href="http://www.3d2nworld.com/privacy_policy">Privacy Policy</a>, including our <a href="http://www.3d2nworld.com/use_of_cookies">Cookie Use</a>.</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Deal -->
    <string name="action_add_to_cart">Add to cart</string>
    <string name="action_more_info">More info</string>
    <string name="action_like">Like</string>
    <string name="action_share">Share</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
