<!--
  ~ Created by Mong Ramos Jr. on 12/17/17 7:45 AM
  ~
  ~ Copyright (c) 2017 Brainbox Inc. All rights reserved.
  ~
  ~ Last modified 12/16/17 9:31 PM
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brainbox.a3d2nworld.activity.SignUpActivity">

    <!-- signup progress -->
    <ProgressBar
        android:id="@+id/signup_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center_horizontal"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/signup_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_marginTop"
                android:layout_marginBottom="@dimen/input_marginBottom">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_fullname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_marginTop"
                android:layout_marginBottom="@dimen/input_marginBottom">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_marginTop"
                android:layout_marginBottom="@dimen/input_marginBottom">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_marginTop"
                android:layout_marginBottom="@dimen/input_marginBottom">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password_verify"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_marginTop"
                android:layout_marginBottom="@dimen/input_marginTop"
                android:padding="16dp"
                android:text="@string/action_register"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>

            <View
                style="@style/ViewSeparator" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/link_facebook_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/facebook"
                android:drawableTint="@color/colorNeutralWarmLight"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/input_marginTop"
                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/action_facebook_login"
                android:backgroundTint="#3B5998"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/link_google_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/google"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/input_marginBottom"

                android:layout_gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/action_google_login"
                android:backgroundTint="#FFFFFF"
                android:textColor="@color/colorNeutralWarmDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_marginTop"
                android:text="@string/agree_tos_and_privacy_policy"
                android:gravity="center"
                android:autoLink="web"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/link_signup_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_has_account"/>

                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
